添加查看购买历史

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,3 +12,5 @@ log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.R.File=D:\\zguizIdeaProject\\logs\\qc.log
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 1log4j.appender.R.layout.ConversionPattern=%d-[TS] %p %t %c - %m%n
+
+log4j.logger.com.zguiz.mapper=trace
